--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.2
-Flask-Bootstrap==3.3.7.1
+Bootstrap_Flask==2.2.0
 qrcode==7.3
 Pillow==10.0.0  # Required by qrcode for image generation
 gunicorn==22.0.0
